--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
+
+
   <title>Frontend Mentor | Order summary card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,23 +20,41 @@
   </style>
 </head>
 <body>
+  <div class="card">
+    <div> <img id="ilustracion-card" src="images/illustration-hero.svg" alt=""> </div>
+    <div>
+        <h1>Order Summary</h1>
 
-  Order Summary
+        <p id="bajada">You can now listen to millions of songs, audiobooks, and podcasts on any
+          device anywhere you like!
+        </p>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+    </div>
 
-  Annual Plan
-  $59.99/year
+    <div class="proposal">
+        <div id="icono"><img src="/images/icon-music.svg" alt=""></div>
+        <h2 id="product-name">Annual Plan</h2>
+        <p id="price-tag">$59.99/year</p>
 
-  Change
+        <a id="link-opcion" href="#">Change</a>
 
-  Proceed to Payment
-  Cancel Order
-  
+    </div>
+
+    <div id="payment-area">
+
+        <button>Proceed to Payment</button>
+        <br>
+        <a href="#">Cancel Order</a>
+
+    </div>
+  </div>
+
+
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
 </body>
 </html>
